Fixed white space at right

--- a/src/assets/styles/_dashboard.scss
+++ b/src/assets/styles/_dashboard.scss
@@ -9,9 +9,7 @@
 }
 
 .dashboard {
-  margin-left: 2.5%;
   height: 96vh;
-
   .btn-dashboard {
     color: $lightgreen !important;
     text-transform: uppercase !important;
